--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -17,7 +17,7 @@
             <p>Main content</p>
         </main>
         <footer>
-            <p>Footer</p
+            <p>Footer</p>
         </footer>
     </body>
 </html>
