--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -60,7 +60,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, 
                     praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem 
                     iste dicta quibusdam atque maxime cum!</p>
-                <div>
+                </div>
             </section>
             <section>
                 <div>
