--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -106,7 +106,9 @@
             </section>
         </main>
         <footer>
-            Footer
+            <div>
+                Footer
+            </div>
         </footer>
     </body>
 </html>
