--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -19,7 +19,15 @@
                         <span>Techium</span>
                     </a>
                 </div>
-                <nav></nav>
+                <nav>
+                    <a href="/">Home</a>
+                    <a href="services">Services</a>
+                    <a href="works">Works</a>
+                    <a href="abaout">Abaout</a>
+                    <a href="latest_news">Latest news</a>
+                    <a href="testimonials">Testimonials</a>
+                    <a href="contact">Contact</a>
+                </nav>
             </div>
         </header>
         <br>
@@ -156,9 +164,7 @@
             <!-- Footer -->
         <footer>
             <div>
-                <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
-                <a href="https://twitter.com/holbertonschool">Twiter</a>
-                <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+                Footer
             </div>
         </footer>
     </body>
