--- a/html_advanced/25-index.html
+++ b/html_advanced/25-index.html
@@ -179,7 +179,7 @@
                 <ul>
                     <li><a href="#">Terms of Use</a></li>
                     <li><a href="#"></a>Privacy Policy</li>
-                    <li><a href="#"></a>Cookie Policy</li
+                    <li><a href="#"></a>Cookie Policy</li>
                 </ul>
             </div>
         </footer>
