--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -22,6 +22,25 @@
                     <header>
                         <h2>Paragraph</h2>
                     </header>
+                    <br>
+                    <!-- Lists -->
+                    <section>
+                        <header>
+                            <h2>
+                                Lists
+                            </h2>
+                        </header>
+                        <div>
+                            <h3>
+                                Ordered
+                            </h3>
+                            <ol>
+                                <li>Dolor pulvinar etiam magna etiam.</li>
+                                <li>Sagittis adipiscing lorem eleifend.</li>
+                                <li>Felis enim feugiat dolore viverra.</li>
+                            </ol>
+                        </div>
+                    </section>
                     <h2>Heading with a subtitle</h2>
                     <p>This is my subtitle</p>
                     <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer 
