--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -32,7 +32,7 @@
                         </header>
                         <div>
                             <h3>
-                                Ordered
+                                Ordere
                             </h3>
                             <ol>
                                 <li>Dolor pulvinar etiam magna etiam.</li>
